<resources>
    <string name="app_name">Megilat Ester</string>
    <string name="purim_songs">Purim songs</string>
    <string name="ad_unit_id_debug" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="ad_unit_id_banner_debug" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="fcm_sender_id" translatable="false">36275289680</string>
    <string name="about_us" translatable="false">Megillat Esther\n\nThis app was created by Mobile Giants.\n
     we build mobile apps and websites for personal and business purpose\n
     for more information please contact @\n 
     shayhaimgalaxys2@gmail.com\n
     or\n
     +972504450614</string>
    <string name="blessings_dialog_title">Megillah Blessings</string>
    <string name="blessings_dialog_close">Close</string>
    <string name="blessings_before_title">Blessings Before the Reading</string>
    <string name="blessings_after_title">After the Reading</string>
    <string name="blessings_before_text" translatable="false">בָּרוּךְ אַתָּה יְיָ אֱלֹהֵינוּ מֶלֶךְ הָעוֹלָם, אֲשֶׁר קִדְּשָׁנוּ בְּמִצְוֹתָיו וְצִוָּנוּ עַל מִקְרָא מְגִלָּה.\nבָּרוּךְ אַתָּה יְיָ אֱלֹהֵינוּ מֶלֶךְ הָעוֹלָם. שֶׁעָשָׂה נִסִּים לַאֲבוֹתֵינוּ בַּיָּמִים הָהֵם בַּזְּמַן הַזֶּה.\nבָּרוּךְ אַתָּה יְיָ אֱלֹהֵינוּ מֶלֶךְ הָעוֹלָם. שֶׁהֶחֱיָנוּ וְקִיְּמָנוּ וְהִגִּיעָנוּ לַזְּמַן הַזֶּה.</string>
    <string name="blessings_after_text" translatable="false">בָּרוּךְ אַתָּה יְיָ אֱלֹהֵינוּ מֶלֶךְ הָעוֹלָם, הָרָב אֶת רִיבֵנוּ, וְהַדָּן אֶת דִּינֵנוּ, וְהַנּוֹקֵם אֶת נִקְמָתֵנוּ, וְהַמְשַׁלֵּם גְּמוּל לְכָל אוֹיְבֵי נַפְשֵׁנוּ, וְהַנִּפְרָע לָנוּ מִצָּרֵינוּ. בָּרוּךְ אַתָּה יְיָ, הַנִּפְרָע לְעַמּוֹ יִשְׂרָאֵל מִכָּל צָרֵיהֶם, הָאֵל הַמּוֹשִׁיעַ.</string>
    <string name="blessings_before_the_reading" translatable="false">ברכות קודם המגילה\n\n
בָּרוּךְ אַתָּה יְיָ אֱלֹהֵינוּ מֶלֶךְ הָעוֹלָם, אֲשֶׁר קִדְּשָׁנוּ בְּמִצְוֹתָיו וְצִוָּנוּ עַל מִקְרָא מְגִלָּה.
בָּרוּךְ אַתָּה יְיָ אֱלֹהֵינוּ מֶלֶךְ הָעוֹלָם. שֶׁעָשָׂה נִסִּים לַאֲבוֹתֵינוּ בַּיָּמִים הָהֵם בַּזְּמַן הַזֶּה.
בָּרוּךְ אַתָּה יְיָ אֱלֹהֵינוּ מֶלֶךְ הָעוֹלָם. שֶׁהֶחֱיָנוּ וְקִיְּמָנוּ וְהִגִּיעָנוּ לַזְּמַן הַזֶּה.</string>
    <string name="blessings_after_the_reading" translatable="false">אחר קריאת המגילה\n\n
בָּרוּךְ אַתָּה יְיָ אֱלֹהֵינוּ מֶלֶךְ הָעוֹלָם, הָרָב אֶת רִיבֵנוּ, וְהַדָּן אֶת דִּינֵנוּ, וְהַנּוֹקֵם אֶת נִקְמָתֵנוּ, וְהַמְשַׁלֵּם גְּמוּל לְכָל אוֹיְבֵי נַפְשֵׁנוּ, וְהַנִּפְרָע לָנוּ מִצָּרֵינוּ. בָּרוּךְ אַתָּה יְיָ, הַנִּפְרָע לְעַמּוֹ יִשְׂרָאֵל מִכָּל צָרֵיהֶם, הָאֵל הַמּוֹשִׁיעַ.</string>
    <string name="first_chapter" translatable="false">פרק א׳ {א} וַיְהִ֖י בִּימֵ֣י אֲחַשְׁוֵר֑וֹשׁ ה֣וּא אֲחַשְׁוֵר֗וֹשׁ הַמֹּלֵךְ֙ מֵהֹ֣דּוּ וְעַד-כּ֔וּשׁ שֶׁ֛בַע וְעֶשְׂרִ֥ים וּמֵאָ֖ה מְדִינָֽה: {ב} בַּיָּמִ֖ים הָהֵ֑ם כְּשֶׁ֣בֶת | הַמֶּ֣לֶךְ אֲחַשְׁוֵר֗וֹשׁ עַ֚ל כִּסֵּ֣א מַלְכוּת֔וֹ אֲשֶׁ֖ר בְּשׁוּשַׁ֥ן הַבִּירָֽה: {ג} בִּשְׁנַ֤ת שָׁלוֹשׁ֙ לְמָלְכ֔וֹ עָשָׂ֣ה מִשְׁתֶּ֔ה לְכָל-שָׂרָ֖יו וַעֲבָדָ֑יו חֵ֣יל | פָּרַ֣ס וּמָדַ֗י הַֽפַּרְתְּמִ֛ים וְשָׂרֵ֥י הַמְּדִינ֖וֹת לְפָנָֽיו: {ד} בְּהַרְאֹת֗וֹ אֶת-עֹ֙שֶׁר֙ כְּב֣וֹד מַלְכוּת֔וֹ וְאֶ֨ת-יְקָ֔ר תִּפְאֶ֖רֶת גְּדוּלָּת֑וֹ יָמִ֣ים רַבִּ֔ים שְׁמוֹנִ֥ים וּמְאַ֖ת יֽוֹם: {ה} וּבִמְל֣וֹאת | הַיָּמִ֣ים הָאֵ֗לֶּה עָשָׂ֣ה הַמֶּ֡לֶךְ לְכָל-הָעָ֣ם הַנִּמְצְאִים֩ בְּשׁוּשַׁ֨ן הַבִּירָ֜ה לְמִגָּ֧דוֹל וְעַד-קָטָ֛ן מִשְׁתֶּ֖ה שִׁבְעַ֣ת יָמִ֑ים בַּחֲצַ֕ר גִּנַּ֥ת בִּיתַ֖ן הַמֶּֽלֶךְ: {ו} ח֣וּר | כַּרְפַּ֣ס וּתְכֵ֗לֶת אָחוּז֙ בְּחַבְלֵי-ב֣וּץ וְאַרְגָּמָ֔ן עַל-גְּלִ֥ילֵי כֶ֖סֶף וְעַמּ֣וּדֵי שֵׁ֑שׁ מִטּ֣וֹת | זָהָ֣ב וָכֶ֗סֶף עַ֛ל רִֽצְפַ֥ת בַּהַט-וָשֵׁ֖שׁ וְדַ֥ר וְסֹחָֽרֶת: {ז} וְהַשְׁקוֹת֙ בִּכְלֵ֣י זָהָ֔ב וְכֵלִ֖ים מִכֵּלִ֣ים שׁוֹנִ֑ים וְיֵ֥ין מַלְכ֛וּת רָ֖ב כְּיַ֥ד הַמֶּֽלֶךְ: {ח} וְהַשְּׁתִיָּ֥ה כַדָּ֖ת אֵ֣ין אֹנֵ֑ס כִּי-כֵ֣ן | יִסַּ֣ד הַמֶּ֗לֶךְ עַ֚ל כָּל-רַ֣ב בֵּית֔וֹ לַעֲשׂ֖וֹת כִּרְצ֥וֹן אִישׁ-וָאִֽישׁ: (ס) {ט} גַּ֚ם וַשְׁתִּ֣י הַמַּלְכָּ֔ה עָשְׂתָ֖ה מִשְׁתֵּ֣ה נָשִׁ֑ים בֵּ֚ית הַמַּלְכ֔וּת אֲשֶׁ֖ר לַמֶּ֥לֶךְ אֲחַשְׁוֵרֽוֹשׁ: {י} בַּיּוֹם֙ הַשְּׁבִיעִ֔י כְּט֥וֹב לֵב-הַמֶּ֖לֶךְ בַּיָּ֑יִן אָמַ֡ר לִ֠מְהוּמָן בִּזְּתָ֨א חַרְבוֹנָ֜א בִּגְתָ֤א וַאֲבַגְתָא֙ זֵתַ֣ר וְכַרְכַּ֔ס שִׁבְעַת֙ הַסָּ֣רִיסִ֔ים הַמְשָׁ֣רְתִ֔ים אֶת-פְּנֵ֖י הַמֶּ֥לֶךְ אֲחַשְׁוֵרֽוֹשׁ: {יא} לְ֠הָבִיא אֶת-וַשְׁתִּ֧י הַמַּלְכָּ֛ה לִפְנֵ֥י הַמֶּ֖לֶךְ בְּכֶ֣תֶר מַלְכ֑וּת לְהַרְא֨וֹת הָֽעַמִּ֤ים וְהַשָּׂרִים֙ אֶת-יָפְיָ֔הּ כִּֽי-טוֹבַ֥ת מַרְאֶ֖ה הִֽיא: {יב} וַתְּמָאֵ֞ן הַמַּלְכָּ֣ה וַשְׁתִּ֗י לָבוֹא֙ בִּדְבַ֣ר הַמֶּ֔לֶךְ אֲשֶׁ֖ר בְּיַ֣ד הַסָּרִיסִ֑ים וַיִּקְצֹ֤ף הַמֶּ֙לֶךְ֙ מְאֹ֔ד וַחֲמָת֖וֹ בָּעֲרָ֥ה בֽוֹ: (ס) {יג} וַיֹּ֣אמֶר הַמֶּ֔לֶךְ לַחֲכָמִ֖ים יֹדְעֵ֣י הָֽעִתִּ֑ים כִּי-כֵן֙ דְּבַ֣ר הַמֶּ֔לֶךְ לִפְנֵ֕י כָּל-יֹדְעֵ֖י דָּ֥ת וָדִֽין: {יד} וְהַקָּרֹ֣ב אֵלָ֗יו כַּרְשְׁנָ֤א שֵׁתָר֙ אַדְמָ֣תָא תַרְשִׁ֔ישׁ מֶ֥רֶס מַרְסְנָ֖א מְמוּכָ֑ן שִׁבְעַ֞ת שָׂרֵ֣י | פָּרַ֣ס וּמָדַ֗י רֹאֵי֙ פְּנֵ֣י הַמֶּ֔לֶךְ הַיֹּשְׁבִ֥ים רִאשֹׁנָ֖ה בַּמַּלְכֽוּת: {טו} כְּדָת֙ מַֽה-לַּעֲשׂ֔וֹת בַּמַּלְכָּ֖ה וַשְׁתִּ֑י עַ֣ל | אֲשֶׁ֣ר לֹֽא-עָשְׂתָ֗ה אֶֽת-מַאֲמַר֙ הַמֶּ֣לֶךְ אֲחַשְׁוֵר֔וֹשׁ בְּיַ֖ד הַסָּרִיסִֽים: (ס) {טז} וַיֹּ֣אמֶר (מומכן) מְמוּכָ֗ן לִפְנֵ֤י הַמֶּ֙לֶךְ֙ וְהַשָּׂרִ֔ים לֹ֤א עַל-הַמֶּ֙לֶךְ֙ לְבַדּ֔וֹ עָוְתָ֖ה וַשְׁתִּ֣י הַמַּלְכָּ֑ה כִּ֤י עַל-כָּל-הַשָּׂרִים֙ וְעַל-כָּל-הָ֣עַמִּ֔ים אֲשֶׁ֕ר בְּכָל-מְדִינ֖וֹת הַמֶּ֥לֶךְ אֲחַשְׁוֵרֽוֹשׁ: {יז} כִּֽי-יֵצֵ֤א דְבַר-הַמַּלְכָּה֙ עַל-כָּל-הַנָּשִׁ֔ים לְהַבְז֥וֹת בַּעְלֵיהֶ֖ן בְּעֵינֵיהֶ֑ן בְּאָמְרָ֗ם הַמֶּ֣לֶךְ אֲחַשְׁוֵר֡וֹשׁ אָמַ֞ר לְהָבִ֨יא אֶת-וַשְׁתִּ֧י הַמַּלְכָּ֛ה לְפָנָ֖יו וְלֹא-בָֽאָה: {יח} וְֽהַיּ֨וֹם הַזֶּ֜ה תֹּאמַ֣רְנָה | שָׂר֣וֹת פָּֽרַס-וּמָדַ֗י אֲשֶׁ֤ר שָֽׁמְעוּ֙ אֶת-דְּבַ֣ר הַמַּלְכָּ֔ה לְכֹ֖ל שָׂרֵ֣י הַמֶּ֑לֶךְ וּכְדַ֖י בִּזָּי֥וֹן וָקָֽצֶף: {יט} אִם-עַל-הַמֶּ֣לֶךְ ט֗וֹב יֵצֵ֤א דְבַר-מַלְכוּת֙ מִלְּפָנָ֔יו וְיִכָּתֵ֛ב בְּדָתֵ֥י פָֽרַס-וּמָדַ֖י וְלֹ֣א יַעֲב֑וֹר אֲשֶׁ֨ר לֹֽא-תָב֜וֹא וַשְׁתִּ֗י לִפְנֵי֙ הַמֶּ֣לֶךְ אֲחַשְׁוֵר֔וֹשׁ וּמַלְכוּתָהּ֙ יִתֵּ֣ן הַמֶּ֔לֶךְ לִרְעוּתָ֖הּ הַטּוֹבָ֥ה מִמֶּֽנָּה: {כ} וְנִשְׁמַע֩ פִּתְגָ֨ם הַמֶּ֤לֶךְ אֲשֶֽׁר-יַעֲשֶׂה֙ בְּכָל-מַלְכוּת֔וֹ כִּ֥י רַבָּ֖ה הִ֑יא וְכָל-הַנָּשִׁ֗ים יִתְּנ֤וּ יְקָר֙ לְבַעְלֵיהֶ֔ן לְמִגָּד֖וֹל וְעַד-קָטָֽן: {כא} וַיִּיטַב֙ הַדָּבָ֔ר בְּעֵינֵ֥י הַמֶּ֖לֶךְ וְהַשָּׂרִ֑ים וַיַּ֥עַשׂ הַמֶּ֖לֶךְ כִּדְבַ֥ר מְמוּכָֽן: {כב} וַיִּשְׁלַ֤ח סְפָרִים֙ אֶל-כָּל-מְדִינ֣וֹת הַמֶּ֔לֶךְ אֶל-מְדִינָ֤ה וּמְדִינָה֙ כִּכְתָבָ֔הּ וְאֶל-עַ֥ם וָעָ֖ם כִּלְשׁוֹנ֑וֹ לִהְי֤וֹת כָּל-אִישׁ֙ שֹׂרֵ֣ר בְּבֵית֔וֹ וּמְדַבֵּ֖ר כִּלְשׁ֥וֹן עַמּֽוֹ: (ס)\n</string>
    <string name="second_chapter" translatable="false">פרק ב׳ {א} אַחַר֙ הַדְּבָרִ֣ים הָאֵ֔לֶּה כְּשֹׁ֕ךְ חֲמַ֖ת הַמֶּ֣לֶךְ אֲחַשְׁוֵר֑וֹשׁ זָכַ֤ר אֶת-וַשְׁתִּי֙ וְאֵ֣ת אֲשֶׁר-עָשָׂ֔תָה וְאֵ֥ת אֲשֶׁר-נִגְזַ֖ר עָלֶֽיהָ: {ב} וַיֹּאמְר֥וּ נַעֲרֵֽי-הַמֶּ֖לֶךְ מְשָׁרְתָ֑יו יְבַקְשׁ֥וּ לַמֶּ֛לֶךְ נְעָר֥וֹת בְּתוּל֖וֹת טוֹב֥וֹת מַרְאֶֽה: {ג} וְיַפְקֵ֨ד הַמֶּ֣לֶךְ פְּקִידִים֮ בְּכָל-מְדִינ֣וֹת מַלְכוּתוֹ֒ וְיִקְבְּצ֣וּ אֶת-כָּל-נַעֲרָֽה-בְ֠תוּלָה טוֹבַ֨ת מַרְאֶ֜ה אֶל-שׁוּשַׁ֤ן הַבִּירָה֙ אֶל-בֵּ֣ית הַנָּשִׁ֔ים אֶל-יַ֥ד הֵגֶ֛א סְרִ֥יס הַמֶּ֖לֶךְ שֹׁמֵ֣ר הַנָּשִׁ֑ים וְנָת֖וֹן תַּמְרוּקֵיהֶֽן: {ד} וְהַֽנַּעֲרָ֗ה אֲשֶׁ֤ר תִּיטַב֙ בְּעֵינֵ֣י הַמֶּ֔לֶךְ תִּמְלֹ֖ךְ תַּ֣חַת וַשְׁתִּ֑י וַיִּיטַ֧ב הַדָּבָ֛ר בְּעֵינֵ֥י הַמֶּ֖לֶךְ וַיַּ֥עַשׂ כֵּֽן: (ס) {ה} אִ֣ישׁ יְהוּדִ֔י הָיָ֖ה בְּשׁוּשַׁ֣ן הַבִּירָ֑ה וּשְׁמ֣וֹ מָרְדֳּכַ֗י בֶּ֣ן יָאִ֧יר בֶּן-שִׁמְעִ֛י בֶּן-קִ֖ישׁ אִ֥ישׁ יְמִינִֽי: {ו} אֲשֶׁ֤ר הָגְלָה֙ מִיר֣וּשָׁלַ֔יִם עִם-הַגֹּלָה֙ אֲשֶׁ֣ר הָגְלְתָ֔ה עִ֖ם יְכָנְיָ֣ה מֶֽלֶךְ-יְהוּדָ֑ה אֲשֶׁ֣ר הֶגְלָ֔ה נְבוּכַדְנֶצַּ֖ר מֶ֥לֶךְ בָּבֶֽל: {ז} וַיְהִ֨י אֹמֵ֜ן אֶת-הֲדַסָּ֗ה הִ֤יא אֶסְתֵּר֙ בַּת-דֹּד֔וֹ כִּ֛י אֵ֥ין לָ֖הּ אָ֣ב וָאֵ֑ם וְהַנַּעֲרָ֤ה יְפַת-תֹּ֙אַר֙ וְטוֹבַ֣ת מַרְאֶ֔ה וּבְמ֤וֹת אָבִ֙יהָ֙ וְאִמָּ֔הּ לְקָחָ֧הּ מָרְדֳּכַ֛י ל֖וֹ לְבַֽת: {ח} וַיְהִ֗י בְּהִשָּׁמַ֤ע דְּבַר-הַמֶּ֙לֶךְ֙ וְדָת֔וֹ וּֽבְהִקָּבֵ֞ץ נְעָר֥וֹת רַבּ֛וֹת אֶל-שׁוּשַׁ֥ן הַבִּירָ֖ה אֶל-יַ֣ד הֵגָ֑י וַתִּלָּקַ֤ח אֶסְתֵּר֙ אֶל-בֵּ֣ית הַמֶּ֔לֶךְ אֶל-יַ֥ד הֵגַ֖י שֹׁמֵ֥ר הַנָּשִֽׁים: {ט} וַתִּיטַ֨ב הַנַּעֲרָ֣ה בְעֵינָיו֮ וַתִּשָּׂ֣א חֶ֣סֶד לְפָנָיו֒ וַ֠יְבַהֵל אֶת-תַּמְרוּקֶ֤יהָ וְאֶת-מָנוֹתֶ֙הָ֙ לָתֵ֣ת לָ֔הּ וְאֵת֙ שֶׁ֣בַע הַנְּעָר֔וֹת הָרְאֻי֥וֹת לָֽתֶת-לָ֖הּ מִבֵּ֣ית הַמֶּ֑לֶךְ וַיְשַׁנֶּ֧הָ וְאֶת-נַעֲרוֹתֶ֛יהָ לְט֖וֹב בֵּ֥ית הַנָּשִֽׁים: {י} לֹא-הִגִּ֣ידָה אֶסְתֵּ֔ר אֶת-עַמָּ֖הּ וְאֶת-מֽוֹלַדְתָּ֑הּ כִּ֧י מָרְדֳּכַ֛י צִוָּ֥ה עָלֶ֖יהָ אֲשֶׁ֥ר לֹא-תַגִּֽיד: {יא} וּבְכָל-י֣וֹם וָי֔וֹם מָרְדֳּכַי֙ מִתְהַלֵּ֔ךְ לִפְנֵ֖י חֲצַ֣ר בֵּית-הַנָּשִׁ֑ים לָדַ֙עַת֙ אֶת-שְׁל֣וֹם אֶסְתֵּ֔ר וּמַה-יֵּעָשֶׂ֖ה בָּֽהּ: {יב} וּבְהַגִּ֡יעַ תֹּר֩ נַעֲרָ֨ה וְנַעֲרָ֜ה לָב֣וֹא | אֶל-הַמֶּ֣לֶךְ אֲחַשְׁוֵר֗וֹשׁ מִקֵּץ֩ הֱי֨וֹת לָ֜הּ כְּדָ֤ת הַנָּשִׁים֙ שְׁנֵ֣ים עָשָׂ֣ר חֹ֔דֶשׁ כִּ֛י כֵּ֥ן יִמְלְא֖וּ יְמֵ֣י מְרוּקֵיהֶ֑ן שִׁשָּׁ֤ה חֳדָשִׁים֙ בְּשֶׁ֣מֶן הַמֹּ֔ר וְשִׁשָּׁ֤ה חֳדָשִׁים֙ בַּבְּשָׂמִ֔ים וּבְתַמְרוּקֵ֖י הַנָּשִֽׁים: {יג} וּבָזֶ֕ה הַֽנַּעֲרָ֖ה בָּאָ֣ה אֶל-הַמֶּ֑לֶךְ אֵת֩ כָּל-אֲשֶׁ֨ר תֹּאמַ֜ר יִנָּ֤תֵֽן לָהּ֙ לָב֣וֹא עִמָּ֔הּ מִבֵּ֥ית הַנָּשִׁ֖ים עַד-בֵּ֥ית הַמֶּֽלֶךְ: {יד} בָּעֶ֣רֶב | הִ֣יא בָאָ֗ה וּ֠בַבֹּקֶר הִ֣יא שָׁבָ֞ה אֶל-בֵּ֤ית הַנָּשִׁים֙ שֵׁנִ֔י אֶל-יַ֧ד שַֽׁעֲשְׁגַ֛ז סְרִ֥יס הַמֶּ֖לֶךְ שֹׁמֵ֣ר הַפִּֽילַגְשִׁ֑ים לֹא-תָב֥וֹא עוֹד֙ אֶל-הַמֶּ֔לֶךְ כִּ֣י אִם-חָפֵ֥ץ בָּ֛הּ הַמֶּ֖לֶךְ וְנִקְרְאָ֥ה בְשֵֽׁם: {טו} וּבְהַגִּ֣יעַ תֹּר-אֶסְתֵּ֣ר בַּת-אֲבִיחַ֣יִל דֹּ֣ד מָרְדֳּכַ֡י אֲשֶׁר֩ לָקַֽח-ל֨וֹ לְבַ֜ת לָב֣וֹא אֶל-הַמֶּ֗לֶךְ לֹ֤א בִקְשָׁה֙ דָּבָ֔ר כִּ֠י אִ֣ם אֶת-אֲשֶׁ֥ר יֹאמַ֛ר הֵגַ֥י סְרִיס-הַמֶּ֖לֶךְ שֹׁמֵ֣ר הַנָּשִׁ֑ים וַתְּהִ֤י אֶסְתֵּר֙ נֹשֵׂ֣את חֵ֔ן בְּעֵינֵ֖י כָּל-רֹאֶֽיהָ: {טז} וַתִּלָּקַ֨ח אֶסְתֵּ֜ר אֶל-הַמֶּ֤לֶךְ אֲחַשְׁוֵרוֹשׁ֙ אֶל-בֵּ֣ית מַלְכוּת֔וֹ בַּחֹ֥דֶשׁ הָעֲשִׂירִ֖י הוּא-חֹ֣דֶשׁ טֵבֵ֑ת בִּשְׁנַת-שֶׁ֖בַע לְמַלְכוּתֽוֹ: {יז} וַיֶּאֱהַ֨ב הַמֶּ֤לֶךְ אֶת-אֶסְתֵּר֙ מִכָּל-הַנָּשִׁ֔ים וַתִּשָּׂא-חֵ֥ן וָחֶ֛סֶד לְפָנָ֖יו מִכָּל-הַבְּתוּלֹ֑ת וַיָּ֤שֶׂם כֶּֽתֶר-מַלְכוּת֙ בְּרֹאשָׁ֔הּ וַיַּמְלִיכֶ֖הָ תַּ֥חַת וַשְׁתִּֽי: {יח} וַיַּ֨עַשׂ הַמֶּ֜לֶךְ מִשְׁתֶּ֣ה גָד֗וֹל לְכָל-שָׂרָיו֙ וַעֲבָדָ֔יו אֵ֖ת מִשְׁתֵּ֣ה אֶסְתֵּ֑ר וַהֲנָחָ֤ה לַמְּדִינוֹת֙ עָשָׂ֔ה וַיִּתֵּ֥ן מַשְׂאֵ֖ת כְּיַ֥ד הַמֶּֽלֶךְ: {יט} וּבְהִקָּבֵ֥ץ בְּתוּל֖וֹת שֵׁנִ֑ית וּמָרְדֳּכַ֖י יֹשֵׁ֥ב בְּשַֽׁעַר-הַמֶּֽלֶךְ: {כ} אֵ֣ין אֶסְתֵּ֗ר מַגֶּ֤דֶת מֽוֹלַדְתָּהּ֙ וְאֶת-עַמָּ֔הּ כַּאֲשֶׁ֛ר צִוָּ֥ה עָלֶ֖יהָ מָרְדֳּכָ֑י וְאֶת-מַאֲמַ֤ר מָרְדֳּכַי֙ אֶסְתֵּ֣ר עֹשָׂ֔ה כַּאֲשֶׁ֛ר הָיְתָ֥ה בְאָמְנָ֖ה אִתּֽוֹ: (ס) {כא} בַּיָּמִ֣ים הָהֵ֔ם וּמָרְדֳּכַ֖י יֹשֵׁ֣ב בְּשַֽׁעַר-הַמֶּ֑לֶךְ קָצַף֩ בִּגְתָ֨ן וָתֶ֜רֶשׁ שְׁנֵֽי-סָרִיסֵ֤י הַמֶּ֙לֶךְ֙ מִשֹּׁמְרֵ֣י הַסַּ֔ף וַיְבַקְשׁוּ֙ לִשְׁלֹ֣חַ יָ֔ד בַּמֶּ֖לֶךְ אֲחַשְׁוֵֽרֹשׁ: {כב} וַיִּוָּדַ֤ע הַדָּבָר֙ לְמָרְדֳּכַ֔י וַיַּגֵּ֖ד לְאֶסְתֵּ֣ר הַמַּלְכָּ֑ה וַתֹּ֧אמֶר אֶסְתֵּ֛ר לַמֶּ֖לֶךְ בְּשֵׁ֥ם מָרְדֳּכָֽי: {כג} וַיְבֻקַּ֤שׁ הַדָּבָר֙ וַיִּמָּצֵ֔א וַיִּתָּל֥וּ שְׁנֵיהֶ֖ם עַל-עֵ֑ץ וַיִּכָּתֵ֗ב בְּסֵ֛פֶר דִּבְרֵ֥י הַיָּמִ֖ים לִפְנֵ֥י הַמֶּֽלֶךְ: (ס)\n</string>
    <string name="megilla_blessings">Blessings</string>
    <string name="auto_scroll_dialog_title">Please choose auto scroll speed rate</string>
    <string name="auto_scroll_dialog_confirm">ok</string>
    <string name="auto_scroll_dialog_cancel">cancel</string>
    <string name="a11y_auto_scroll">Auto scroll</string>
    <string name="a11y_noisemaker">Noisemaker</string>
    <string name="a11y_gunfire">Gunfire sound</string>
    <string name="a11y_grenade">Explosion sound</string>
    <string name="a11y_quiz">Purim quiz</string>
    <string name="a11y_play_pause">Play or Pause</string>
    <string name="a11y_next_song">Next song</string>
    <string name="a11y_previous_song">Previous song</string>
    <string name="a11y_shuffle">Shuffle songs</string>
    <string name="a11y_seek_bar">Song progress</string>
</resources>